fixed scrollbar issue

--- a/src/components/RequirementsComponents.css
+++ b/src/components/RequirementsComponents.css
@@ -56,6 +56,7 @@
   width:70%;
   height:70%;
   overflow-y: scroll;
+  scrollbar-width: none;
   border: 1px solid rgb(75, 74, 74);
 }
 
